# nitidus

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: check.yml  test.yml
src/: account_config.rs  app.rs  app2.rs  config.rs  control.rs  errors.rs  fields.rs  logging.rs  mail_client.rs  main.rs
src/account_config/: account_config.rs  imap_config.rs  maildir_config.rs  view.rs
src/fields/: select.rs  text.rs
