[package]
name = "nitidus"
authors = ["Joshka"]
description = "A TUI email client"
repository = "https://github.com/joshka/nitidus"
license = "MIT"
documentation = "https://docs.rs/nitidus"
version = "0.1.8"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
color-eyre = { version = "0.6.3", features = ["issue-url"] }
crossterm = "0.27.0"
directories = "5.0.1"
email-lib = "=0.22.3"
figment = { version = "0.10.19", features = ["env", "toml"] }
himalaya = "1.0.0-beta.3"
ratatui = "0.27.0"
serde = "1.0.210"
serde_with = "3.9.0"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-error = "0.2.0"
tracing-log = "0.2.0"
tui-logger = { version = "0.13.1", default-features = false, features = [
    "tracing-support",
] }

# email-lib = { git = "https://git.sr.ht/~soywod/pimalaya", default-features = false }
# mail-builder = "0.3.1"
# tokio-rustls = "0.25.0"
